# features_goldmine

./: README.md  pyproject.toml
examples/: breast_cancer_binary.py  california_housing.py  credit_scoring.py  house_prices_rmse.py  iris_multiclass.py
features_goldmine/: __init__.py  golden_features.py  records.py
features_goldmine/filtering/: __init__.py  quick_filters.py  redundancy.py
features_goldmine/generation/: __init__.py  candidate_builder.py  categorical.py  categorical_group_deviation.py  categorical_hash_cross.py  categorical_prototypes.py  context_knn.py  formulas.py  grouped_stats.py  projections.py  residuals.py  rules.py
features_goldmine/mining/: __init__.py  interaction_ranker.py  lgbm_trainer.py  path_extractor.py
features_goldmine/reporting/: __init__.py  report.py
features_goldmine/selection/: __init__.py  importance.py  survival.py
features_goldmine/strategies/: __init__.py  base.py  lightgbm_paths.py
scripts/: release_check.sh
tests/: test_api_validation.py  test_selection_behavior.py  test_serialization.py
