[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "features-goldmine"
version = "1.0.1"
description = "Automatic feature engineering for tabular machine learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "features_goldmine"}]
keywords = ["feature-engineering", "lightgbm", "tabular-data", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "lightgbm>=4.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["features_goldmine*"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
